--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -1,5 +1,4 @@
 /* root colors */
-
 :root {
   --primary: #3f51b5;
   --secondary: #9c27b0;
@@ -29,7 +28,6 @@
   align-items: center;
   background: var(--gray-dark);
   position: absolute;
-
 }
 
 .content {
@@ -46,7 +44,7 @@
   padding-top: 24px;
 }
 
-.content-header{
+.content-header {
   width: 100%;
   padding: 20px;
   border-radius: 24px;
@@ -93,7 +91,7 @@
   background-color: var(--secondary);
 }
 
-.quote-container{
+.quote-container {
   width: 100%;
   height: 300px;
   padding: 20px;
@@ -106,7 +104,8 @@
   flex-direction: column;
   gap: 20px;
 }
-.quote{
+
+.quote {
   color: var(--white);
   font-weight: 500;
   font-size: 2rem;
@@ -114,7 +113,8 @@
   text-align: center;
   width: 75%;
 }
-.quote-description{
+
+.quote-description {
   color: var(--black);
   font-weight: 600;
   font-size: 1.5rem;
@@ -124,21 +124,86 @@
 }
 
 .loader {
-    width: 48px;
-    height: 48px;
-    border: 5px solid var(--secondary);
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-    }
+  width: 48px;
+  height: 48px;
+  border: 5px solid var(--secondary);
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
 
-    @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-    } 
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .content {
+    width: 80%;
+    height: auto;
+    padding: 15px;
+  }
+
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .subtitle {
+    font-size: 1rem;
+    width: 80%;
+  }
+
+  .button {
+    font-size: 1.2rem;
+    padding: 8px 16px;
+  }
+
+  .quote {
+    font-size: 1.5rem;
+    width: 90%;
+  }
+
+  .quote-description {
+    font-size: 1.2rem;
+    width: 90%;
+  }
+}
+
+@media (max-width: 480px) {
+  .content {
+    width: 90%;
+    height: auto;
+    padding: 10px;
+  }
+
+  .title {
+    font-size: 1.2rem;
+  }
+
+  .subtitle {
+    font-size: 0.9rem;
+    width: 90%;
+  }
+
+  .button {
+    font-size: 1rem;
+    padding: 6px 12px;
+  }
+
+  .quote {
+    font-size: 1.2rem;
+    width: 100%;
+  }
+
+  .quote-description {
+    font-size: 1rem;
+    width: 100%;
+  }
+}
